--- a/xzarsk03-contracts-for-concurrency-20-bibliography.bib
+++ b/xzarsk03-contracts-for-concurrency-20-bibliography.bib
@@ -199,6 +199,19 @@ series = {POPL '04}
     numpages = {9}
 }
 
+@article{highLevelDataRaces,
+    author = {Artho, Cyrille and Havelund, Klaus and Biere, Armin},
+    title = {High-level data races},
+    journal = {Software Testing, Verification and Reliability},
+    volume = {13},
+    number = {4},
+    pages = {207-227},
+    keywords = {Java, multi-threading, data races, software verification, consistency},
+    doi = {10.1002/stvr.281},
+    abstract = {Abstract Data races are a common problem in concurrent and multi-threaded programming. Experience shows that the classical notion of a data race is not powerful enough to capture certain types of inconsistencies occurring in practice. This paper investigates data races on a higher abstraction layer. This enables detection of inconsistent uses of shared variables, even if no classical race condition occurs. For example, a data structure representing a coordinate pair may have to be treated atomically. By lifting the meaning of a data race to a higher level, such problems can now be covered. The paper defines the concepts ‘view’ and ‘view consistency’ to give a notation for this novel kind of property. It describes what kinds of errors can be detected with this new definition, and where its limitations are. It also gives a formal guideline for using data structures in a multi-threaded environment. © US Government copyright},
+    year = {2003}
+}
+
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
