--- a/xzarsk03-contracts-for-concurrency-30-appendices.tex
+++ b/xzarsk03-contracts-for-concurrency-30-appendices.tex
@@ -1,3 +1,22 @@
+\chapter{Storage Medium}
+\label{storage}
+
+The contents of the enclosed CD:
+\begin{description}
+    \item [\texttt{RoadRunner/}] The source code of the analyzer.
+    \item [\texttt{RoadRunner-compiled/}] Compiled analyzer.
+    \item [\texttt{patches/}] The source code of the analyzer, as patches
+        against commit \texttt{b141616} in the upstream RoadRunner
+        repository\footnote{available at
+        \url{https://github.com/stephenfreund/RoadRunner}}.
+    \item [\texttt{contracts-for-concurrency.pdf}] The text of the
+        thesis.
+    \item [\texttt{contracts-for-concurrency-print.pdf}] The text of
+        the thesis, for color printing.
+    \item [\texttt{contracts-for-concurrency/}] The sources code of the text of
+        the thesis.
+\end{description}
+
 \chapter{Manual}
 \label{manual}
 
