--- a/xzarsk03-contracts-for-concurrency-30-appendices.tex
+++ b/xzarsk03-contracts-for-concurrency-30-appendices.tex
@@ -53,6 +53,11 @@ $ rrrun -tool=CT -contractFile=test/ContractTest.contract test.ContractTest
 \end{lstlisting}
 The analyzer should find a~contract violation.
 
+The integration tests are by the following command:
+\begin{lstlisting}
+$ testScripts/all.sh
+\end{lstlisting}
+
 \chapter{Contract Definition Grammar}
 \label{appGrammar}
 
