--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -21,7 +21,7 @@
 %\documentclass[]{fitthesis} % bez zadání - pro začátek práce, aby nebyl problém s překladem
 %\documentclass[english]{fitthesis} % without assignment - for the work start to avoid compilation problem
 %\documentclass[zadani]{fitthesis} % odevzdani do wisu a/nebo tisk s barevnými odkazy - odkazy jsou barevné
-\documentclass[english,zadani,odsaz]{fitthesis} % for submission to the IS FIT and/or print with color links - links are color
+\documentclass[english,zadani]{fitthesis} % for submission to the IS FIT and/or print with color links - links are color
 %\documentclass[english,zadani,odsaz,cprint]{fitthesis}
 %\documentclass[zadani,print]{fitthesis} % pro černobílý tisk - odkazy jsou černé
 %\documentclass[english,zadani,print]{fitthesis} % for the black and white print - links are black
@@ -154,7 +154,7 @@
   sekvencí metod ve vícevláknových programech. Tato práce se zaměřuje na
   implementaci dynamického analyzátoru, který verifikuje programy napsané
   v~jazyce Java vůči kontraktům. Podporovány jsou parametrické kontrakty se
-  spoilery. Analyzátor je implementován jako rozšíření frameworku RoadRunner. V
+  spojlery. Analyzátor je implementován jako rozšíření frameworku RoadRunner. V
   rámci implementace analyzátoru byla do frameworku RoadRunner přidána podpora
   pro získávání argumentů metod a jejich návratových hodnot. Analyzátor byl plně
   implementován a jeho funkčnost byla ověřena na sadě testovacích programů.},
@@ -170,7 +170,8 @@
   original work by the author under the supervision of Ing. Aleš Smrčka, Ph.D.
   I have listed all the literary sources, publications and other sources, which
   were used during the preparation of this project.},
-  acknowledgment={},
+  acknowledgment={I would like to thank Ing.~Aleš Smrčka, Ph.D., for valuable
+  advice that helped me with the implementation and writing of this thesis.},
   extendedabstract={},
   faculty.cs={Fakulta informačních technologií},
   faculty.en={Faculty of Information Technology},
@@ -187,50 +188,54 @@
     vyvinuté jinými vývojáři. Při jejich integraci je zapotřebí dodržet
     pravidla stanovená autorem knihovny. Pravidla zahrnují syntaxi a~sémantiku
     operací poskytovaných knihovnou. Ve vícevláknovém prostředí je ale zapotřebí
-    dodržet dodatečné požadavky na synchronizaci vláken pracujících s~knihovnou.
+    dodržet dodatečné požadavky na synchronizaci vláken, která provádí
+    ope\-ra\-ce poskytované danou knihovnou.
 
     Kontrakty pro paralelismus slouží ke specifikaci omezení pro práci
     s~knihovnou ve vícevláknových programech. Kontrakty specifikují, které
-    sekvence operací musí být vykonávány atomicky, tedy bez toho, aby jiné
-    vlákno provádělo souběžně jinou operaci. Existují dvě rozšíření, které
+    sekvence operací musí být vy\-ko\-ná\-vá\-ny atomicky, tedy bez toho, aby
+    jiné vlákno provádělo souběžně jinou operaci. Existují dvě rozšíření, která
     upřesňují, za jakých podmínek je nutné dodržet atomicitu operací.
     Parametrické kontrakty reflektují datový tok mezi operacemi. Umožňují tak
     například vyjádřit, že dvě operace musí být prováděny atomicky pouze tehdy,
-    pokud modifikují stejná data. Kontrakty se spojlery dovolují některým
-    operacím probíhat souběžně, například pokud operace provádí pouze čtení
+    pokud modifikují stej\-ná data. Kontrakty se spojlery dovolují některým
+    operacím probíhat souběžně, například pokud ope\-ra\-ce provádí pouze čtení
     sdílených dat. Kontrakty pro paralelismus lze sledovat za běhu programu
     a~existuje metoda pro kontrolu jejich dodržování.
 
     Cílem této práce je vytvořit dynamický analyzátor, který sleduje dodržování
-    parametrických kontraktů se spojlery. Analyzátor pracuje s~vícevláknovými
-    programy v~jazyce Java. Využívá frameworku RoadRunner, který provádí
-    instrumentaci programů pro zkoumání chování programů za běhu. RoadRunner
-    vkládá instrukce do bajtkódu programu, které pak za běhu zasílají
-    analyzátoru události o~volaných metodách, přístupech do paměti,
+    pa\-ra\-met\-ric\-kých kontraktů se spojlery. Analyzátor pracuje
+    s~vícevláknovými programy v~jazyce Java. Využívá frameworku RoadRunner,
+    který provádí instrumentaci programů pro zkou\-má\-ní chování programů za
+    běhu.  RoadRunner vkládá instrukce do bajtkódu programu, které pak za běhu
+    zasílají analyzátoru události o~volaných metodách, přístupech do paměti,
     synchronizaci vláken a~podobně.
 
     Vstupem analyzátoru je konfigurační soubor s~definicí kontraktu, který
-    určuje sekvence detekované analyzátorem. Sledovaný program je následně
-    instrumentován frameworkem RoadRunner. Instrumentace volání metod byla
-    v~rámci práce rozšířena o~získávání argumentů metod a~jejich návratových
-    hodnot. Instrumentovaný program je následně spuštěn. Analyzátor pro
-    sledování kontraktů pro paralelismus konzumuje události spojené s~voláním
-    metod a~synchronizací vláken. Na základě těchto událostí jsou detekovány
-    sekvence metod a~případná porušení kontraktu. Analyzátor si pro každé vlákno
-    programu udržuje naposledy detekované sekvence metod. Pro každé vlákno
-    a~zámek si také udržuje vektorové hodiny nesoucí informace o~vzájemné
+    určuje sekvence, které budou detekované analyzátorem. Sledovaný program je
+    následně instrumentován frameworkem RoadRunner. Instrumentace volání metod
+    byla v~rámci práce rozšířena o~získávání argumentů metod a~jejich
+    návratových hodnot. Instrumentovaný program je následně spuštěn. Analyzátor
+    pro sledování kontraktů pro paralelismus konzumuje události spojené
+    s~voláním metod a~synchronizací vláken. Na základě těchto událostí jsou
+    detekovány sekvence metod a~případná porušení kontraktu. Analyzátor si pro
+    každé vlákno programu udržuje naposledy detekované sekvence metod. Pro každé
+    vlákno a~zámek si také udržuje vektorové hodiny nesoucí informace o~vzájemné
     synchronizaci vláken. Jakmile je detekována celá sekvence, analyzátor na
     základě nedávných sekvencí v~jiných vláknech a~vektorových hodinách
-    vyhodnotí, zda nedošlo k~proložení sekvencí tak, aby byl porušen kontrakt.
+    vy\-hod\-no\-tí, zda nedošlo k~proložení sekvencí tak, aby byl porušen
+    kontrakt. Díky využití vektorových hodin dokáže analyzátor odhalit proložení
+    metod, ke kterému nedošlo přímo v daném běhu, ale může k němu dojít v
+    podobných bězích.
 
     Při návrhu analyzátoru byly zohledněny výsledky existujících prototypových
-    implementací a~schopnosti analyzátoru byly záměrně omezeny. Analyzátor tak
-    klade dodatečné požadavky jak na kontrakty, tak na programy, které dokáže
-    sledovat. Kontrakty musí splňovat následující podmínku: hodnoty všech
-    parametrů kontraktu jsou určeny voláním první metody kontraktu. Tato
-    podmínka zabraňuje zbytečné duplikaci sledovaných sekvencí. Analyzované
-    programy nesmí obsahovat zanořená volání metod, které jsou sledovány v~rámci
-    kontraktu.
+    imple\-men\-ta\-cí a~schopnosti analyzátoru byly záměrně omezeny. Analyzátor
+    tak klade dodatečné po\-ža\-dav\-ky jak na kontrakty, tak na programy, které
+    dokáže sledovat. Kontrakty musí spl\-ňo\-vat následující podmínku: hodnoty
+    všech parametrů kontraktu jsou určeny voláním první metody kontraktu. Tato
+    podmínka zabraňuje zbytečné duplikaci sledovaných sekvencí.
+    Ana\-ly\-zo\-va\-né programy nesmí obsahovat zanořená volání metod
+    sledovaných v~rámci kontraktu.
 
     Při implementaci byly využity principy funkcionálního programování, zejména
     neměnné (immutable) objekty postavené na knihovně Vavr nebo funkce vyššího
@@ -241,10 +246,11 @@
     spojlery. Změny v~instrumentaci mohou být využity dalšími analyzátory
     vyžadujícími argumenty metod a~návratové hodnoty. Jednotlivé části
     analyzátoru mohou být v~budoucnu optimalizovány s~ohledem na rychlost.
-    Funkcionální implementace analyzátoru umožňuje snadnou paralelizaci kontroly
-    kontraktů. Dalšího zlepšení výkonu lze dosáhnout lepší definicí podmínek, za
-    kterých lze zahazovat detekované sekvence metod. Analyzátor lze rozšířit
-    o~vkládání šumu pro detekci méně obvyklých chyb.
+    Funkcionální implementace analyzátoru umožňuje snadnou
+    pa\-ra\-le\-li\-za\-ci kontroly kontraktů. Dalšího zlepšení výkonu lze
+    dosáhnout lepší definicí podmínek, za kterých lze zahazovat detekované
+    sekvence metod. Analyzátor lze rozšířit o~vkládání šumu pro detekci méně
+    obvyklých chyb.
 }
 
 % nastavení délky bloku s titulkem pro úpravu zalomení řádku - lze definovat zde nebo výše / setting the length of a block with a thesis title for adjusting a line break - can be defined here or above
